Add repos for gpu and mlx install to kickstart file in Rocky 8 (#2405)
* Remove gpu and mlx install from kickstart file

We will be installing directly from CIQ repos once they're ready anyway

* Add CIQ repos for Nvidia and Mlx drivers

* Add dnf install commands to repos added in previous commit

* Replace preview Rocky 9 workflows with final workflows

Also cleaning up old workflow files for preview builds

* Fix missing EOM

* Fix naming of workflows

More concise, but still clear

* Add cuda repos for kickstart configs

* Fix missing EOM

* Install nvidia-accelerated-graphics-driver with kickstart

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
@@ -1,12 +1,12 @@
-# rocky-linux-8-optimized-gcp-options.cfg
+# rocky-linux-9-optimized-gcp.cfg
 
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-url --url="https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel"
-repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/8/BaseOS/x86_64/os" --excludepkgs="kernel,kernel-core"
-repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/8/AppStream/x86_64/os"
-repo --name=PowerTools --baseurl="https://dl.rockylinux.org/pub/rocky/8/PowerTools/x86_64/os"
+url --url="https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel"
+repo --name=BaseOS --baseurl="https://dl.rockylinux.org/pub/rocky/9/BaseOS/x86_64/os" --excludepkgs="kernel,kernel-core"
+repo --name=AppStream --baseurl="https://dl.rockylinux.org/pub/rocky/9/AppStream/x86_64/os"
+repo --name=CRB --baseurl="https://dl.rockylinux.org/pub/rocky/9/CRB/x86_64/os"
 poweroff
 
 # Network configuration
@@ -100,7 +100,7 @@ vim
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el8-x86_64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -110,7 +110,7 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el8-x86_64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
 enabled=1
 gpgcheck=1
 repo_gpgcheck=0
@@ -121,28 +121,26 @@ EOM
 # Rocky Linux Cloud Kernel repo.
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
 [cloud-kernel]
-name=Rocky Linux 8 - Cloud Kernel
-baseurl=https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel
+name=Rocky Linux 9 - Cloud Kernel
+baseurl=https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel
 enabled=1
 gpgcheck=1
-gpgkey=https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+gpgkey=https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 priority=-1
 EOM
 tee -a /etc/yum.repos.d/Rocky-CloudKernel.repo << EOM
 [cloud-kernel-source]
-name=Rocky Linux 8 - Cloud Kernel Source
-baseurl=https://dl.rockylinux.org/pub/sig/8/cloud/source/cloud-kernel
+name=Rocky Linux 9 - Cloud Kernel Source
+baseurl=https://dl.rockylinux.org/pub/sig/9/cloud/source/cloud-kernel
 enabled=0
 gpgcheck=1
-gpgkey=https://dl.rockylinux.org/pub/sig/8/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
+gpgkey=https://dl.rockylinux.org/pub/sig/9/cloud/x86_64/cloud-kernel/RPM-GPG-KEY-Rocky-SIG-Cloud
 priority=-1
 EOM
 # Be sure we don't get kernels from the BaseOS repo
-tee -a /etc/yum.repos.d/Rocky-BaseOS.repo << EOM
-exclude=kernel*
-EOM
+sed -i '/\[baseos\]/a exclude=kernel*' /etc/yum.repos.d/rocky.repo
 %end
-# Google Compute Engine kickstart config for Enterprise Linux 8.
+# Google Compute Engine kickstart config for Enterprise Linux 9.
 %onerror
 echo "Build Failed!" > /dev/ttyS0
 shutdown -h now
@@ -170,7 +168,7 @@ cat >>/etc/dhcp/dhclient.conf <<EOL
 retry 10;
 EOL
 
-# Set google-compute-engine config for EL8.
+# Set google-compute-engine config for EL9.
 cat >>/etc/default/instance_configs.cfg.distro << EOL
 # Disable boto plugin setup.
 [InstanceSetup]
@@ -179,15 +177,16 @@ EOL
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyS0; exit 1; }
 
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
 
 # Install Accelerator components: nvidia and mellanox drivers
 tee -a /etc/yum.repos.d/Rocky-OpenGPU.repo << EOM
-[open-gpu-kernel-modules-el8-x86_64]
+[open-gpu-kernel-modules-el9-x86_64]
 name = Open gpu kernel modules (x86_64)
-baseurl = https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el8-x86_64
+baseurl = https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64
 metadata_expire = 5
 priority = 50
 repo_gpgcheck = false
@@ -196,9 +195,9 @@ enabled = true
 skip_if_unavailable = true
 EOM
 tee -a /etc/yum.repos.d/Rocky-Mlx.repo << EOM
-[nvidia-mellanox-ofed-driver-el8-x86_64]
+[nvidia-mellanox-ofed-driver-el9-x86_64]
 name = Nvidia Mellanox OFED Drivers
-baseurl = https://depot.ciq.com/public/files/gce-accelerator/nvidia-mellanox-ofed-driver-el8-x86_64
+baseurl = https://depot.ciq.com/public/files/gce-accelerator/nvidia-mellanox-ofed-driver-el9-x86_64
 metadata_expire = 5
 priority = 50
 repo_gpgcheck = false
@@ -207,10 +206,10 @@ enabled = true
 skip_if_unavailable = true
 EOM
 
-dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
-dnf install -y open-gpu-kernel-modules-el8-x86_64
+dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/x86_64/cuda-rhel9.repo
+dnf install -y open-gpu-kernel-modules-el9-x86_64
 dnf install -y nvidia-accelerated-graphics-driver
-dnf install -y nvidia-mellanox-ofed-driver-el8-x86_64
+dnf install -y nvidia-mellanox-ofed-driver-el9-x86_64
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -223,7 +222,7 @@ rm -f /etc/boto.cfg /etc/udev/rules.d/70-persistent-net.rules
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens4
 
 # Disable password authentication by default.
-sed -i -e '/^PasswordAuthentication /s/ yes$/ no/' /etc/ssh/sshd_config
+sed -i -e '/#PasswordAuthentication/s/.*/PasswordAuthentication no/' /etc/ssh/sshd_config
 
 # Set ServerAliveInterval and ClientAliveInterval to prevent SSH
 # disconnections. The pattern match is tuned to each source config file.
@@ -233,7 +232,7 @@ sed -i -e $'/^Host \\*$/a \\\tServerAliveInterval 420' /etc/ssh/ssh_config
 sed -i -e '/ClientAliveInterval/s/^.*/ClientAliveInterval 420/' /etc/ssh/sshd_config
 
 # Disable root login via SSH by default.
-sed -i -e '/PermitRootLogin yes/s/^.*/PermitRootLogin no/' /etc/ssh/sshd_config
+sed -i -e '/#PermitRootLogin/s/.*/PermitRootLogin no/' /etc/ssh/sshd_config
 
 # Update all packages.
 dnf -y update
@@ -272,3 +271,4 @@ restorecon /etc/resolv.conf
 set -x
 rm -Rf /mnt/sysimage/tmp/*
 %end
+
