Fix rocky accelerator package names

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_8_optimized_gcp_accelerator.cfg
@@ -208,9 +208,9 @@ skip_if_unavailable = true
 EOM
 
 dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel8/x86_64/cuda-rhel8.repo
-dnf install -y open-gpu-kernel-modules-el8-x86_64
+dnf install -y nvidia-open-gpu-kernel-modules
 dnf install -y nvidia-accelerated-graphics-driver
-dnf install -y nvidia-mellanox-ofed-driver-el8-x86_64
+dnf install -y mlnx-ofed-guest
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
