Use packages for repo configuration instead of writing it manually

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
@@ -183,33 +183,11 @@ rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Bu
 dnf install -y google-cloud-cli
 
 # Install Accelerator components: nvidia and mellanox drivers
-tee -a /etc/yum.repos.d/Rocky-OpenGPU.repo << EOM
-[open-gpu-kernel-modules-el9-x86_64]
-name = Open gpu kernel modules (x86_64)
-baseurl = https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64
-metadata_expire = 5
-priority = 50
-repo_gpgcheck = false
-gpgcheck = false
-enabled = true
-skip_if_unavailable = true
-EOM
-tee -a /etc/yum.repos.d/Rocky-Mlx.repo << EOM
-[nvidia-mellanox-ofed-driver-el9-x86_64]
-name = Nvidia Mellanox OFED Drivers
-baseurl = https://depot.ciq.com/public/files/gce-accelerator/nvidia-mellanox-ofed-driver-el9-x86_64
-metadata_expire = 5
-priority = 50
-repo_gpgcheck = false
-gpgcheck = false
-enabled = true
-skip_if_unavailable = true
-EOM
-
+dnf install -y https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64/nvidia-open-gpu-repos.noarch.rpm https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64/nvidia-mellanox-ofed-repos.noarch.rpm
 dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/x86_64/cuda-rhel9.repo
-dnf install -y nvidia-open-gpu-kernel-modules
-dnf install -y nvidia-accelerated-graphics-driver
-dnf install -y mlnx-ofed-guest
+
+dnf install -y nvidia-open-gpu-kernel-modules nvidia-accelerated-graphics-driver mlnx-ofed-guest
+
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
