--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator.cfg
@@ -185,7 +185,7 @@ dnf install -y google-cloud-cli
 # Install Accelerator components: nvidia and mellanox drivers
 dnf install -y https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64/nvidia-open-gpu-repos.noarch.rpm https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64/nvidia-mellanox-ofed-repos.noarch.rpm
 dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/x86_64/cuda-rhel9.repo
-
+dnf install -y dnf-plugin-protected-kmods
 dnf install -y nvidia-open-gpu-kernel-modules nvidia-accelerated-graphics-driver mlnx-ofed-guest
 
 
