Add public-image tags to containers

--- a/cli_tools_cloudbuild.yaml
+++ b/cli_tools_cloudbuild.yaml
@@ -32,6 +32,7 @@ steps:
   args:
   - --destination=gcr.io/$PROJECT_ID/gce_image_publish:$_RELEASE
   - --destination=gcr.io/$PROJECT_ID/gce_image_publish:$COMMIT_SHA
+  - --destination=gcr.io/$PROJECT_ID/gce_image_publish:public-image-$COMMIT_SHA
   - --context=/workspace
   - --dockerfile=gce_image_publish.Dockerfile
 
@@ -48,6 +49,7 @@ steps:
   args:
   - --destination=gcr.io/$PROJECT_ID/gce_export:$_RELEASE
   - --destination=gcr.io/$PROJECT_ID/gce_export:$COMMIT_SHA
+  - --destination=gcr.io/$PROJECT_ID/gce_export:public-image-$COMMIT_SHA
   - --context=/workspace
   - --dockerfile=gce_export.Dockerfile
 
@@ -60,60 +62,88 @@ steps:
   args:
   - --destination=gcr.io/$PROJECT_ID/gce_windows_upgrade:$_RELEASE
   - --destination=gcr.io/$PROJECT_ID/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=gcr.io/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-central1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-central1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-central1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-west1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-west1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-west1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-west2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-west2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-west2-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-west3-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-west3-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-west3-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-west4-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-west4-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-west4-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-east1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-east1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-east1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=us-east4-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=us-east4-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=us-east4-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=northamerica-northeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=northamerica-northeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=northamerica-northeast1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=southamerica-east1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=southamerica-east1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=southamerica-east1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-north1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-north1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-north1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-west1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-west1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-west1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-west2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-west2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-west2-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-west3-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-west3-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-west3-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-west4-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-west4-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-west4-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=europe-west6-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=europe-west6-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=europe-west6-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-east1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-east1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-east1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-east2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-east2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-east2-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-northeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-northeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-northeast1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-northeast2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-northeast2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-northeast2-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-northeast3-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-northeast3-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-northeast3-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-south1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-south1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-south1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-southeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-southeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-southeast1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=asia-southeast2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=asia-southeast2-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=asia-southeast2-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --destination=australia-southeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$_RELEASE
   - --destination=australia-southeast1-docker.pkg.dev/$PROJECT_ID/wrappers/gce_windows_upgrade:$COMMIT_SHA
+  - --destination=australia-southeast1-docker.pkg.dev/$PROJECT_ID/gce_windows_upgrade:public-image-$COMMIT_SHA
   - --context=/workspace
   - --dockerfile=gce_windows_upgrade.Dockerfile
 
