--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator_550.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rocky_linux_9_optimized_gcp_accelerator_550.cfg
@@ -186,8 +186,7 @@ dnf install -y google-cloud-cli
 dnf install -y https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64/nvidia-open-gpu-repos.noarch.rpm https://depot.ciq.com/public/files/gce-accelerator/open-gpu-kernel-modules-el9-x86_64/nvidia-mellanox-ofed-repos.noarch.rpm
 dnf config-manager --add-repo https://developer.download.nvidia.com/compute/cuda/repos/rhel9/x86_64/cuda-rhel9.repo
 
-dnf install -y nvidia-open-gpu-kernel-modules nvidia-accelerated-graphics-driver mlnx-ofed-guest kmod-nvidia-open-gpu550
-
+dnf install -y nvidia-dc-driver550-cuda kmod-nvidia-dc-open550 doca-ofed
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
