--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
@@ -13,7 +13,8 @@ network --bootproto=dhcp --device=link
 firewall --enabled
 services --enabled=sshd,rngd --disabled=sshd-keygen@
 skipx
-timezone --utc UTC --ntpservers=metadata.google.internal
+# TODO: Fix this when we can enable it
+# timezone --utc UTC --ntpservers=metadata.google.internal
 rootpw --iscrypted --lock *
 firstboot --disabled
 user --name=gce --lock
