change command for specifying NTP servers for rhel-10

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -13,8 +13,8 @@ network --bootproto=dhcp --device=link
 firewall --enabled
 services --enabled=sshd,rngd --disabled=sshd-keygen@
 skipx
-# TODO: Fix this when we can enable it
-# timezone --utc UTC --ntpservers=metadata.google.internal
+timezone --utc UTC
+chrony --ntpservers=metadata.google.internal --iburst
 rootpw --iscrypted --lock *
 firstboot --disabled
 user --name=gce --lock
