--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
@@ -13,8 +13,8 @@ network --bootproto=dhcp --device=link
 firewall --enabled
 services --enabled=sshd,rngd --disabled=sshd-keygen@
 skipx
-# TODO: Fix this when we can enable it
-# timezone --utc UTC --ntpservers=metadata.google.internal
+timezone --utc UTC
+chrony --ntpservers=metadata.google.internal --iburst
 rootpw --iscrypted --lock *
 firstboot --disabled
 user --name=gce --lock
@@ -31,7 +31,7 @@ udevadm control --reload
 udevadm trigger --settle
 tee -a /tmp/disk-config << EOM
 # build_installer.py will replace with the id of the install disk to avoid race conditions
-bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="biosdevname=0 scsi_mod.use_blk_mq=Y"
+bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="scsi_mod.use_blk_mq=Y"
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
