--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -14,7 +14,7 @@ firewall --enabled
 services --enabled=sshd,rngd --disabled=sshd-keygen@
 skipx
 timezone --utc UTC
-timesource --ntp-server=metadata.google.internal --iburst
+timesource --ntp-server=metadata.google.internal
 rootpw --iscrypted --lock *
 firstboot --disabled
 user --name=gce --lock
