--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -95,26 +95,25 @@ vim
 -zd1211-firmware
 %end
 
+# TODO: Enable gpgchecks when ready
 %post
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
 baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
 enabled=1
-gpgcheck=1
-gpgcheck=0 # TODO: Enable this when ready
+gpgcheck=0
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
-
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
 baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
 enabled=1
-gpgcheck=0 # TODO: Enable this when ready
-gpgcheck=1
+gpgcheck=0
+repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
