--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -154,6 +154,9 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 set_boto_config = false
 EOL
 
+# TODO: Remove this after getting RHEL 10 builds working
+dnf config-manager --disable rhui-rhel-9-for-aarch64-appstream-rhui-debug-rpms
+
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand || { echo "Build Failed!" > /dev/ttyAMA0; exit 1; }
