glob all rhui repos instead for rhel 10 kickstart

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -155,7 +155,7 @@ set_boto_config = false
 EOL
 
 # TODO: Remove this after getting RHEL 10 builds working
-dnf config-manager --disable rhui-rhel-9-for-aarch64-appstream-rhui-debug-rpms
+dnf config-manager --disable rhui*
 
 # Install GCE guest packages.
 dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand --disablerepo="rhui*"
