remove logic disabling rhui and force releasever to 9 temporarily (#2484)
* glob all rhui repos instead for rhel 10 kickstart

* remove logic disabling rhui and force releasever to 9 temporarily

---------

Co-authored-by: Liam Leahy (liamll) <liamll@google.com>

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
@@ -142,6 +142,8 @@ userdel -r gce
 # curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
 # rpm --import /etc/pki/rpm-gpg/google*
 
+echo 9 > /etc/dnf/vars/releasever
+
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
 # we want to leave the standard Linux firewall setup enabled but all-open.
@@ -154,11 +156,8 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 set_boto_config = false
 EOL
 
-# TODO: Remove this after getting RHEL 10 builds working
-dnf config-manager --disable rhui-rhel-9-for-x86_64-appstream-rhui-debug-rpms
-
 # Install GCE guest packages.
-dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand --disablerepo="rhui*"
+dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
 rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 
 # Install the Cloud SDK package.
