remove releasever override right after installing google packages

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
@@ -164,6 +164,8 @@ rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 dnf install -y google-cloud-cli
 rpm -q google-cloud-cli
 
+rm -f /etc/dnf/vars/releasever
+
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
 
