Add centos stream 10 configs for image builds

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -1,9 +1,11 @@
-# rhel-10-options.cfg
+# centos-stream-9-arm64-options.cfg
 
 ### Anaconda installer configuration.
 # Install in text mode.
 text --non-interactive
-harddrive --partition=/dev/disk/by-id/google-disk-installer-part2 --dir=/
+url --url="http://mirror.stream.centos.org/10-stream/BaseOS/aarch64/os"
+repo --name=AppStream --baseurl="http://mirror.stream.centos.org/10-stream/AppStream/aarch64/os"
+repo --name=CRB --baseurl="http://mirror.stream.centos.org/10-stream/CRB/aarch64/os"
 poweroff
 
 # Network configuration
@@ -13,8 +15,7 @@ network --bootproto=dhcp --device=link
 firewall --enabled
 services --enabled=sshd,rngd --disabled=sshd-keygen@
 skipx
-timezone --utc UTC
-timesource --ntp-server=metadata.google.internal
+timezone --utc UTC --ntpservers=metadata.google.internal
 rootpw --iscrypted --lock *
 firstboot --disabled
 user --name=gce --lock
@@ -31,7 +32,7 @@ udevadm control --reload
 udevadm trigger --settle
 tee -a /tmp/disk-config << EOM
 # build_installer.py will replace with the id of the install disk to avoid race conditions
-bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0 --append="scsi_mod.use_blk_mq=Y"
+bootloader --boot-drive=/dev/disk/by-id/google-el-install-disk --timeout=0
 # EFI partitioning, creates a GPT partitioned disk.
 clearpart --drives=/dev/disk/by-id/google-el-install-disk --all
 part /boot/efi --size=200 --fstype=efi --ondrive=/dev/disk/by-id/google-el-install-disk
@@ -48,6 +49,7 @@ EOM
 
 %packages
 acpid
+dhcp-client
 dnf-automatic
 net-tools
 openssh-server
@@ -55,54 +57,32 @@ python3
 rng-tools
 tar
 vim
--subscription-manager
--rhc
--insights-client
--alsa-utils
--b43-fwcutter
--dmraid
--eject
 -gpm
 -irqbalance
 -microcode_ctl
--smartmontools
--aic94xx-firmware
--atmel-firmware
--b43-openfwwf
--bfa-firmware
--ipw2100-firmware
--ipw2200-firmware
--ivtv-firmware
+-linux-firmware-whence
+-linux-firmware
 -iwl100-firmware
 -iwl1000-firmware
--iwl3945-firmware
--iwl4965-firmware
+-iwl105-firmware
+-iwl135-firmware
+-iwl2000-firmware
+-iwl2030-firmware
+-iwl3160-firmware
 -iwl5000-firmware
 -iwl5150-firmware
--iwl6000-firmware
 -iwl6000g2a-firmware
 -iwl6050-firmware
--kernel-firmware
--libertas-usb8388-firmware
--ql2100-firmware
--ql2200-firmware
--ql23xx-firmware
--ql2400-firmware
--ql2500-firmware
--rt61pci-firmware
--rt73usb-firmware
--xorg-x11-drv-ati-firmware
--zd1211-firmware
+-iwl7260-firmware
 %end
 
-# TODO: Enable gpgchecks when ready
 %post
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-compute-engine]
 name=Google Compute Engine
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
 enabled=1
-gpgcheck=0
+gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
@@ -110,46 +90,42 @@ EOM
 tee -a /etc/yum.repos.d/google-cloud.repo << EOM
 [google-cloud-sdk]
 name=Google Cloud SDK
-baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
 enabled=1
-gpgcheck=0
+gpgcheck=1
 repo_gpgcheck=0
 gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
 %end
-%post --erroronfail
-set -x
-exec &> /dev/ttyS0
-dnf -y install google-rhui-client-rhel9
-%end
-
 # Google Compute Engine kickstart config for Enterprise Linux 10.
 %onerror
-echo "Build Failed!" > /dev/ttyS0
+echo "Build Failed!" > /dev/ttyAMA0
 shutdown -h now
 %end
 
 %post --erroronfail
 set -x
-exec &> /dev/ttyS0
+exec &> /dev/ttyAMA0
 # Delete the dummy user account.
 userdel -r gce
 
 # Import all RPM GPG keys.
-# TODO: Uncomment this logic when ready
-# curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
-# rpm --import /etc/pki/rpm-gpg/google*
-
-echo 9 > /etc/dnf/vars/releasever
+curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
+rpm --import /etc/pki/rpm-gpg/google*
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
 # we want to leave the standard Linux firewall setup enabled but all-open.
 firewall-offline-cmd --set-default-zone=trusted
 
-# Set google-compute-engine config for EL10.
+cat >>/etc/dhcp/dhclient.conf <<EOL
+# Set the dhclient retry interval to 10 seconds instead of 5 minutes.
+retry 10;
+EOL
+
+# Set google-compute-engine config for EL9.
 cat >>/etc/default/instance_configs.cfg.distro << EOL
 # Disable boto plugin setup.
 [InstanceSetup]
@@ -163,8 +139,6 @@ rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
 # Install the Cloud SDK package.
 dnf install -y google-cloud-cli
 rpm -q google-cloud-cli
-
-rm -f /etc/dnf/vars/releasever
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
@@ -226,7 +200,7 @@ restorecon /etc/resolv.conf
 %end
 
 # Cleanup.
-%post --nochroot --log=/dev/ttyS0
+%post --nochroot --log=/dev/ttyAMA0
 set -x
 rm -Rf /mnt/sysimage/tmp/*
 %end
