--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_arm64.cfg
@@ -49,7 +49,6 @@ EOM
 %packages
 acpid
 dnf-automatic
-dnf-utils
 net-tools
 openssh-server
 python3
@@ -96,63 +95,33 @@ vim
 -zd1211-firmware
 %end
 
-# %post
-# tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-# [google-compute-engine]
-# name=Google Compute Engine
-# baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
-# enabled=1
-# gpgcheck=0
-# repo_gpgcheck=0
-# gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-#        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# EOM
-# tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-# [google-cloud-sdk]
-# name=Google Cloud SDK
-# baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
-# enabled=1
-# gpgcheck=0
-# repo_gpgcheck=0
-# gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-#        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# EOM
-# %end
-
-%post --erroronfail
-set -x
-exec &> /dev/ttyAMA0
-
-tee /etc/yum.repos.d/google-cloud-el9.repo << EOM
-[google-compute-engine-el9]
-name=Google Compute Engine EL9
+# TODO: Enable gpgchecks when ready
+%post
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-compute-engine]
+name=Google Compute Engine
 baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-aarch64-stable
 enabled=1
 gpgcheck=0
 repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 EOM
-
-cd /tmp
-dnf download google-guest-agent gce-disk-expand \
-    --disablerepo="*" \
-    --enablerepo="google-compute-engine-el9"
-
-if ! ls google-guest-agent*.rpm > /dev/null 2>&1 || ! ls gce-disk-expand*.rpm > /dev/null 2>&1; then
-    echo "ERROR: Failed to download RPM packages."
-    exit 1
-fi
-
-ls *.rpm
-
-rpm -ivh --nodeps google-guest-agent*.rpm
-rpm -ivh --nodeps gce-disk-expand*.rpm
-
-systemctl enable google-guest-agent
-systemctl enable gce-disk-expand
-
-rm -f /tmp/*.rpm
-rm -f /etc/yum.repos.d/google-cloud-el9.repo
-
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sdk]
+name=Google Cloud SDK
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-aarch64
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
+%end
+%post --erroronfail
+set -x
+exec &> /dev/ttyAMA0
+dnf -y install google-rhui-client-rhel9
 %end
 
 # Google Compute Engine kickstart config for Enterprise Linux 9.
