Add centos stream 10 configs for image builds

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/rhel_10_x86.cfg
@@ -49,7 +49,6 @@ EOM
 %packages
 acpid
 dnf-automatic
-dnf-utils
 net-tools
 openssh-server
 python3
@@ -97,33 +96,33 @@ vim
 %end
 
 # TODO: Enable gpgchecks when ready
-# %post
-# tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-# [google-compute-engine]
-# name=Google Compute Engine
-# baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
-# enabled=1
-# gpgcheck=0
-# repo_gpgcheck=0
-# gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-#        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# EOM
-# tee -a /etc/yum.repos.d/google-cloud.repo << EOM
-# [google-cloud-sdk]
-# name=Google Cloud SDK
-# baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
-# enabled=0
-# gpgcheck=0
-# repo_gpgcheck=0
-# gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
-#        https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
-# EOM
-# %end
-# %post --erroronfail
-# set -x
-# exec &> /dev/ttyS0
-# dnf -y install google-rhui-client-rhel9
-# %end
+%post
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-compute-engine]
+name=Google Compute Engine
+baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
+tee -a /etc/yum.repos.d/google-cloud.repo << EOM
+[google-cloud-sdk]
+name=Google Cloud SDK
+baseurl=https://packages.cloud.google.com/yum/repos/cloud-sdk-el9-x86_64
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+gpgkey=https://packages.cloud.google.com/yum/doc/yum-key.gpg
+       https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+EOM
+%end
+%post --erroronfail
+set -x
+exec &> /dev/ttyS0
+dnf -y install google-rhui-client-rhel9
+%end
 
 # Google Compute Engine kickstart config for Enterprise Linux 10.
 %onerror
@@ -137,46 +136,13 @@ exec &> /dev/ttyS0
 # Delete the dummy user account.
 userdel -r gce
 
-%post --erroronfail
-set -ex
-exec &> /dev/ttyS0
-
-tee /etc/yum.repos.d/google-cloud-el9.repo << EOM
-[google-compute-engine-el9]
-name=Google Compute Engine EL9
-baseurl=https://packages.cloud.google.com/yum/repos/google-compute-engine-el9-x86_64-stable
-enabled=1
-gpgcheck=0
-repo_gpgcheck=0
-EOM
-
-cd /tmp
-dnf download google-guest-agent gce-disk-expand \
-    --disablerepo="*" \
-    --enablerepo="google-compute-engine-el9"
-
-if ! ls google-guest-agent*.rpm > /dev/null 2>&1 || ! ls gce-disk-expand*.rpm > /dev/null 2>&1; then
-    echo "ERROR: Failed to download RPM packages."
-    exit 1
-fi
-
-ls *.rpm
-
-rpm -ivh --nodeps google-guest-agent*.rpm
-rpm -ivh --nodeps gce-disk-expand*.rpm
-
-systemctl enable google-guest-agent
-systemctl enable gce-disk-expand
-
-rm -f /tmp/*.rpm
-%end
-rm -f /etc/yum.repos.d/google-cloud-el9.repo
-
 # Import all RPM GPG keys.
 # TODO: Uncomment this logic when ready
 # curl -o /etc/pki/rpm-gpg/google-rpm-package-key.gpg https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
 # curl -o /etc/pki/rpm-gpg/google-key.gpg https://packages.cloud.google.com/yum/doc/yum-key.gpg
 # rpm --import /etc/pki/rpm-gpg/google*
+
+echo 9 > /etc/dnf/vars/releasever
 
 # Configure the network for GCE.
 # Given that GCE users typically control the firewall at the network API level,
@@ -189,6 +155,16 @@ cat >>/etc/default/instance_configs.cfg.distro << EOL
 [InstanceSetup]
 set_boto_config = false
 EOL
+
+# Install GCE guest packages.
+dnf install -y google-compute-engine google-osconfig-agent gce-disk-expand
+rpm -q google-compute-engine google-osconfig-agent gce-disk-expand
+
+# Install the Cloud SDK package.
+dnf install -y google-cloud-cli
+rpm -q google-cloud-cli
+
+rm -f /etc/dnf/vars/releasever
 
 # Send /root/anaconda-ks.cfg to our logs.
 cp /run/install/ks.cfg /tmp/anaconda-ks.cfg
