try to fix issue with the software selection and timezone for centos stream 10

--- a/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
+++ b/daisy_workflows/image_build/enterprise_linux/kickstart/centos_stream_10_arm64.cfg
@@ -48,6 +48,7 @@ EOM
 # always selected by default so they do not need to be specified.
 
 %packages
+@^minimal-environment
 acpid
 dhcp-client
 dnf-automatic
@@ -57,23 +58,21 @@ python3
 rng-tools
 tar
 vim
--gpm
--irqbalance
 -microcode_ctl
--linux-firmware-whence
--linux-firmware
--iwl100-firmware
--iwl1000-firmware
--iwl105-firmware
--iwl135-firmware
--iwl2000-firmware
--iwl2030-firmware
--iwl3160-firmware
--iwl5000-firmware
--iwl5150-firmware
--iwl6000g2a-firmware
--iwl6050-firmware
--iwl7260-firmware
+# -linux-firmware-whence
+# -linux-firmware
+# -iwl100-firmware
+# -iwl1000-firmware
+# -iwl105-firmware
+# -iwl135-firmware
+# -iwl2000-firmware
+# -iwl2030-firmware
+# -iwl3160-firmware
+# -iwl5000-firmware
+# -iwl5150-firmware
+# -iwl6000g2a-firmware
+# -iwl6050-firmware
+# -iwl7260-firmware
 %end
 
 %post
